references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/FlowConnectionUsage_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:aafb7c3a2771271c36c338488f14f9d5f5e05fb5173fe26e09bc21f8685ea365
size 2830
